# fyp

./: .gitignore  README.md  start.sh
python/: command_server.py  hello_world.py  mobile_control.html  run_spot.bat  spot1.py  spot_template.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/mec_mobile/share/mec_mobile/: local_setup.sh  package.sh
ros2_ws/install/mec_mobile_description/share/mec_mobile_description/: local_setup.sh  package.sh
ros2_ws/install/mec_mobile_gazebo/share/mec_mobile_gazebo/: local_setup.sh  package.sh
ros2_ws/install/mec_mobile_navigation/lib/mec_mobile_navigation/: posestamped_msg_generator.py  test_nav_to_pose.py
ros2_ws/install/my_4wd_robot_bringup/share/my_4wd_robot_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_4wd_robot_bringup/share/my_4wd_robot_bringup/cmake/: my_4wd_robot_bringupConfig.cmake
ros2_ws/install/my_4wd_robot_bringup/share/my_4wd_robot_bringup/launch/: 4wd_gazebo_slam.launch.py
ros2_ws/install/my_4wd_robot_description/share/my_4wd_robot_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_4wd_robot_description/share/my_4wd_robot_description/cmake/: my_4wd_robot_descriptionConfig.cmake
ros2_ws/install/my_4wd_robot_description/share/my_4wd_robot_description/urdf/: 4wd_robot.urdf.xacro
ros2_ws/install/robotnik_gazebo_ignition/share/robotnik_gazebo_ignition/: local_setup.sh  package.sh  package.xml
ros2_ws/install/robotnik_gazebo_ignition/share/robotnik_gazebo_ignition/cmake/: robotnik_gazebo_ignitionConfig.cmake
ros2_ws/install/robotnik_gazebo_ignition/share/robotnik_gazebo_ignition/launch/: slam_nav2_setup.launch.py  spawn_robot.launch.py  spawn_world.launch.py  teleop_keyboard.launch.py
ros2_ws/install/robotnik_gazebo_ignition/share/robotnik_gazebo_ignition/worlds/: parking.world
ros2_ws/install/robotnik_gazebo_ignition/share/robotnik_gazebo_ignition/worlds/ignition/: demo.sdf.world  parking.sdf  parking.world
ros2_ws/log/: latest_build
ui/: README.md  index.html  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ChargingAnimation.tsx  ChargingSummary.tsx  ChargingTimeSelect.tsx  DigitalReceipt.tsx  KwhInputSelect.tsx  LocationSelect.tsx  ParkingSpotSelect.tsx  ZappBotLogo.tsx
ui/src/pages/: Charging.tsx  Main.tsx  Receipt.tsx
(+1467 files in other folders)
