<?xml version="1.0"?>
<package format="3">
  <name>my_4wd_robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for basic 4WD differential robot in Gazebo and ROS2</description>
  <maintainer email="user@todo.todo">TODO: Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
</package> 