<?xml version="1.0"?>
<package format="3">
  <name>my_4wd_robot_description</name>
  <version>0.0.1</version>
  <description>Basic 4WD differential robot description for Gazebo and ROS2</description>
  <maintainer email="user@todo.todo">TODO: Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package> 